# coma

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
app/: _celery.py  common.py  config.py  dependencies.py  interfaces.py  lifespan.py  main.py  models_dto.py  models_orm.py  redis_clients.py  utils.py
app/database/: database.py  repositories.py  sql_alchemy_repo.py
app/routes/: api.py  dependencies.py  files.py  frontend.py
app/services/: image_service.py  search_service.py
app/tasks/: image_tasks.py
static/css/: index.css  items.css  magic_button.css  styles.css  upload.css
static/html/: index.html  index.html.jinja  items.html.jinja  upload.html.jinja
static/html/components/: base.html.jinja  navigation.html.jinja  search.html.jinja
static/js/: glow_btns_sparkles.js  upload_item.js
